# valorant-database

./: README.md
ValorantDatabase/: ValorantStatsERDiagram(1).mwb  pyproject.toml
ValorantDatabase/src/data/: createDatabase.sql
ValorantDatabase/src/scripts/: createDatabase.sql  install_database.py
ValorantDatabase/valorant_database.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
